@@ -1,4 +1,4 @@
-# $NetBSD: md.sparc64,v 1.112 2011/04/17 09:01:57 mrg Exp $
+# $NetBSD: md.sparc64,v 1.113 2011/05/09 08:51:08 manu Exp $
 ./libexec/ld.elf_so-sparc			base-sysutil-bin	compat,pic
 ./sbin/edlabel					base-sysutil-root	obsolete
 ./usr/bin/fdformat				base-util-bin
@@ -179,6 +179,9 @@
 ./usr/lib/sparc/libpcap.so.4.0			base-compat-shlib	compat,pic
 ./usr/lib/sparc/libpci.so.2			base-compat-shlib	compat,pic
 ./usr/lib/sparc/libpci.so.2.0			base-compat-shlib	compat,pic
+./usr/lib/sparc/libperfuse.so			base-compat-shlib       compat,pic,perfuse		
+./usr/lib/sparc/libperfuse.so.0			base-compat-shlib       compat,pic,perfuse
+./usr/lib/sparc/libperfuse.so.0.0		base-compat-shlib       compat,pic,perfuse
 ./usr/lib/sparc/libposix.so.0			base-compat-shlib	compat,pic
 ./usr/lib/sparc/libposix.so.0.1			base-compat-shlib	compat,pic
 ./usr/lib/sparc/libprop.so.1			base-compat-shlib	compat,pic
